--- a/urfu-autumn/appsettings.Development.json
+++ b/urfu-autumn/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Server": "Host=localhost;Port=5532;Database=Urfu;Username=postgres;Password=postgres"
   }
 }
